k8s/traefik/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: workshop
spec:
  stripPrefix:
    prefixes:
      - /api
