k8s/traefik/public-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: public
  namespace: workshop
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: web-service
          port: 3000
